--- a/css/demos/bellepestcontrol.css
+++ b/css/demos/bellepestcontrol.css
@@ -16,8 +16,8 @@ p {
 
 .custom-heading-1 {
 		-webkit-text-fill-color: transparent;
-		-webkit-text-stroke-width: 0.5px;
-		-webkit-text-stroke-color: #CCC;
+		-webkit-text-stroke-width: 2px;
+		-webkit-text-stroke-color: black;
 		white-space: nowrap;
 		font-size: 80px;
 		font-weight: bold;
